package com.mad.mymoon;

import android.app.DatePickerDialog;
import android.app.Dialog;
import android.content.Intent;
import android.os.Bundle;
import android.widget.DatePicker;
import android.widget.TextView;

import androidx.annotation.NonNull;
import androidx.fragment.app.DialogFragment;

import com.mad.mymoon.ui.Phases.PhasesFragment;

import java.util.Calendar;

public class DatePickerFragment extends DialogFragment implements DatePickerDialog.OnDateSetListener{
    @NonNull
    @Override
    public Dialog onCreateDialog(Bundle savedInstanceState) {
        Calendar c = Calendar.getInstance();
        int year = c.get(Calendar.YEAR);
        int month = c.get(Calendar.MONTH);
        int day = c.get(Calendar.DAY_OF_MONTH);
        return new DatePickerDialog(getActivity(), this, year, month, day);
    }

    @Override
    public void onDateSet(DatePicker view, int year, int month, int dayOfMonth) {
        populateSetDate(year, month+1, dayOfMonth);

    }

    private void populateSetDate(int year, int month, int dayOfMonth) {
        TextView todaysDate= (TextView)getActivity(). findViewById(R.id.txtTodaysDate);
        todaysDate.setText("Date: " + dayOfMonth+ "-"+ month +"-"+year);

        PhasesFragment pf = (PhasesFragment) getParentFragmentManager().findFragmentById(R.id.fragment_phases);
        pf.getDates(dayOfMonth, month,year);
    }
}
