@startuml

title __MYMOON.APP's Class Diagram__\n

  namespace com.mad.mymoon {
    class com.mad.mymoon.AugmentedEarth {
    }
  }
  

  namespace com.mad.mymoon {
    class com.mad.mymoon.AugmentedMoon {
    }
  }
  

  namespace com.mad.mymoon {
    class com.mad.mymoon.AugmentedPortal {
    }
  }
  

  namespace com.mad.mymoon {
    class com.mad.mymoon.BuildConfig {
    }
  }
  

  namespace com.mad.mymoon {
    class com.mad.mymoon.Dashboard {
    }
  }
  

  namespace com.mad.mymoon {
    class com.mad.mymoon.DatePickerFragment {
    }
  }
  

  namespace com.mad.mymoon {
    class com.mad.mymoon.MainActivity {
    }
  }
  

  namespace com.mad.mymoon {
    namespace ui.AR {
      class com.mad.mymoon.ui.AR.ARFragment {
      }
    }
  }
  

  namespace com.mad.mymoon {
    namespace ui.AR {
      class com.mad.mymoon.ui.AR.ARViewModel {
      }
    }
  }
  

  namespace com.mad.mymoon {
    namespace ui.Discover {
      class com.mad.mymoon.ui.Discover.DiscoverFragment {
      }
    }
  }
  

  namespace com.mad.mymoon {
    namespace ui.Discover {
      class com.mad.mymoon.ui.Discover.DiscoverViewModel {
      }
    }
  }
  

  namespace com.mad.mymoon {
    namespace ui.Phases {
      class com.mad.mymoon.ui.Phases.PhasesFragment {
      }
    }
  }
  

  namespace com.mad.mymoon {
    namespace ui.Phases {
      class com.mad.mymoon.ui.Phases.PhasesViewModel {
      }
    }
  }
  

  namespace com.mad.mymoon {
    namespace ui.home {
      class com.mad.mymoon.ui.home.HomeFragment {
      }
    }
  }
  

  namespace com.mad.mymoon {
    namespace ui.home {
      class com.mad.mymoon.ui.home.HomeViewModel {
      }
    }
  }
  

  com.mad.mymoon.AugmentedEarth -up-|> androidx.appcompat.app.AppCompatActivity
  com.mad.mymoon.AugmentedMoon -up-|> androidx.appcompat.app.AppCompatActivity
  com.mad.mymoon.AugmentedPortal -up-|> androidx.appcompat.app.AppCompatActivity
  com.mad.mymoon.Dashboard -up-|> androidx.appcompat.app.AppCompatActivity
  com.mad.mymoon.DatePickerFragment .up.|> android.app.DatePickerDialog.OnDateSetListener
  com.mad.mymoon.DatePickerFragment -up-|> androidx.fragment.app.DialogFragment
  com.mad.mymoon.MainActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.mad.mymoon.ui.AR.ARFragment -up-|> androidx.fragment.app.Fragment
  com.mad.mymoon.ui.AR.ARFragment o-- com.mad.mymoon.ui.AR.ARViewModel : ARViewModel
  com.mad.mymoon.ui.AR.ARViewModel -up-|> androidx.lifecycle.ViewModel
  com.mad.mymoon.ui.Discover.DiscoverFragment -up-|> androidx.fragment.app.Fragment
  com.mad.mymoon.ui.Discover.DiscoverFragment o-- com.mad.mymoon.ui.Discover.DiscoverViewModel : discoverViewModel
  com.mad.mymoon.ui.Discover.DiscoverViewModel -up-|> androidx.lifecycle.ViewModel
  com.mad.mymoon.ui.Phases.PhasesFragment -up-|> androidx.fragment.app.Fragment
  com.mad.mymoon.ui.Phases.PhasesFragment o-- com.mad.mymoon.ui.Phases.PhasesViewModel : phasesViewModel
  com.mad.mymoon.ui.Phases.PhasesViewModel -up-|> androidx.lifecycle.ViewModel
  com.mad.mymoon.ui.home.HomeFragment -up-|> androidx.fragment.app.Fragment
  com.mad.mymoon.ui.home.HomeFragment o-- com.mad.mymoon.ui.home.HomeViewModel : homeViewModel
  com.mad.mymoon.ui.home.HomeViewModel -up-|> androidx.lifecycle.ViewModel


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
